# gstreamer

./: .gitignore  .gitlab-image-tags.yml  .gitmodules  configure.ac  meson.build  meson_options.txt
data/misc/: gstreamer-full-default.map
docs/gst/: gstreamer-sections.txt
docs/libs/: gstreamer-libs-docs.sgml  gstreamer-libs-sections.txt
girs/: Gst-1.0.gir
gst/: gst.c  gst.h  gst_private.h  gstallocator.c  gstbin.c  gstclock.c  gstdevicemonitor.c  gstdeviceprovider.c  gstelement.c  gstelement.h  gstevent.c  gstevent.h  gstghostpad.c  gstinfo.c  gstinfo.h  gstmacros.h  gstmemory.h  gstmeta.c  gstpad.c  gstparamspecs.c  gstparamspecs.h  gstquark.c  gstquark.h  gstregistry.c  gstsystemclock.c  gsttask.c  gsttask.h  gsttrace.c  gsttracerutils.c  gsttracerutils.h  gstutils.c  gstutils.h  gstvalue.c  meson.build
libs/gst/base/: Makefile.am  base.h  gstaggregator.c  gstbaseparse.c  gstbasetransform.c  gstpriqueue.c  meson.build
libs/gst/check/: Makefile.am  gstcheck.c  gstcheck.h  gstharness.c  gstharness.h  gsttestclock.c  gsttestclock.h  meson.build
libs/gst/check/libcheck/: check.h.in  (+1 more)
libs/gst/net/: gstnetaddressmeta.c  meson.build
plugins/: Makefile.am
plugins/elements/: gstfdsrc.c  gstfilesrc.c  gstfilesrc.h  gstfunnel.c  gstqueue.c  gstqueue2.c
scripts/: generate_init_static_plugins.py
subprojects/gst-devtools/: meson.build
subprojects/gst-docs/symbols/: symbol_index.json
subprojects/gst-editing-services/: meson.build
subprojects/gst-integration-testsuites/: meson.build
subprojects/gst-libav/: meson.build
subprojects/gst-plugins-bad/: meson.build  meson.options  meson_options.txt
subprojects/gst-plugins-bad/docs/: meson.build
subprojects/gst-plugins-bad/ext/: meson.build
subprojects/gst-plugins-bad/ext/aes/: meson.build
subprojects/gst-plugins-bad/ext/dcsctp/: dcsctpassociation.c  dcsctpassociation.h  dcsctpassociation_factory.c  dcsctpassociation_factory.h  gstdcsctpdec.c  gstdcsctpdec.h  gstdcsctpenc.c  gstdcsctpenc.h  meson.build  plugin.c
subprojects/gst-plugins-bad/ext/dcsctp/lib/: meson.build
subprojects/gst-plugins-bad/ext/dcsctp/lib/absl/strings/: numbers.cc
subprojects/gst-plugins-bad/ext/dcsctp/lib/net/dcsctp/public/: dcsctp_socket.h
subprojects/gst-plugins-bad/ext/dcsctp/lib/net/dcsctp/socket/: dcsctp_socket.cc  packet_sender.cc
subprojects/gst-plugins-bad/ext/sctp/: gstsctpdec.c  gstsctpdec.h  gstsctpenc.c  gstsctpenc.h  gstsctpplugin.c  meson.build  sctpassociation.c  sctpassociation.h  sctpassociation_factory.c  sctpassociation_factory.h  sctpsocket.cc  sctpsocket.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/: .clang-format  dcsctp_transport.cc  dcsctp_transport.h  meson.build  sctpsocket.cc  sctpsocket.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/absl/meta/: type_traits.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/absl/strings/: numbers.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/absl/types/: optional.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/absl/utility/: utility.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/api/: scoped_refptr.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/lib/: meson.build
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/packet/: crc32c.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/packet/parameter/: reconfiguration_response_parameter.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/public/: dcsctp_handover_state.cc  dcsctp_socket.h
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/rx/: data_tracker.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/socket/: dcsctp_socket.cc  dcsctp_socket.h  packet_sender.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/net/dcsctp/timer/: timer.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/rtc_base/: checks.cc
subprojects/gst-plugins-bad/ext/sctp/dcsctp/rtc_base/memory/: aligned_malloc.cc
subprojects/gst-plugins-bad/ext/sctp/usrsctp/: gstsctpenc.c  gstsctpenc.h  meson.build  sctpassociation.c  sctpassociation.h
subprojects/gst-plugins-bad/ext/sctp/usrsctp/usrsctplib/: meson.build  user_environment.c  user_environment.h  user_mbuf.c  user_recv_thread.c  user_socket.c  user_socketvar.h
subprojects/gst-plugins-bad/ext/sctp/usrsctp/usrsctplib/netinet/: sctp_callout.h  sctp_os_userspace.h  sctp_pcb.c  sctp_pcb.h  sctp_usrreq.c
subprojects/gst-plugins-bad/ext/sctp/usrsctp/usrsctplib/src/netinet/: sctp_output.c
subprojects/gst-plugins-bad/gst-libs/gst/sctp/: meson.build  sctpreceivemeta.c  sctpreceivemeta.h  sctpsendmeta.c  sctpsendmeta.h
subprojects/gst-plugins-base/: meson.build
subprojects/gst-plugins-base/docs/: meson.build
subprojects/gst-plugins-good/: meson.build
subprojects/gst-plugins-good/docs/: gst_plugins_cache.json
subprojects/gst-plugins-good/ext/vpx/: gstvp8enc.c  gstvp9dec.c  gstvp9enc.c  gstvp9enc.h  gstvpxdec.c  gstvpxdec.h  gstvpxenc.c  gstvpxenc.h  meson.build  plugin.c
subprojects/gst-plugins-ugly/: meson.build
subprojects/gst-python/: meson.build
subprojects/gst-rtsp-server/: meson.build
subprojects/gstreamer/: meson.build  meson.options  meson_options.txt
subprojects/gstreamer-sharp/: meson.build
subprojects/gstreamer-vaapi/: meson.build
subprojects/gstreamer/gst/: gst.c  gst_private.h  gstandroid.c  gstbin.c  gstbin.h  gstclock.c  gstdevicemonitor.c  gstdeviceprovider.c  gstelement.c  gstelement.h  gstevent.c  gstevent.h  gstghostpad.c  gstinfo.c  gstinfo.h  gstmacos.h  gstmacos.m  gstmacros.h  gstpad.c  gstpad.h  gstparamspecs.c  gstparamspecs.h  gstquark.c  gstquark.h  gstsystemclock.c  gsttask.c  gsttask.h  gstvalue.c
tests/check/: Makefile.am  gstreamer.supp  meson.build
tests/check/elements/: dataurisrc.c  fakesink.c  fakesrc.c  fdsrc.c  filesrc.c  multiqueue.c  queue.c  rtmp.c  speex.c  tee.c
tests/check/generic/: states.c
tests/check/gst/: gstbin.c  gstelement.c  gstghostpad.c  gstinfo.c  gstpoll.c  gstpreset.c
tests/check/libs/: gstharness.c  gstnetclientclock.c  gstnettimeprovider.c  gstpriqueue.c  gsttxfeedback.c  test_transform.c  transform1.c
tests/check/pipelines/: seek.c
win32/common/: libgstreamer.def
(+306 files in other folders)
