/ api:array_view
/ rtc_base:strong_alias
/
/  absl_deps = [ '/third_party/abseil-cpp/absl/types:optional' ]
/  '/third_party/abseil-cpp/absl/strings',
/  '/third_party/abseil-cpp/absl/strings:strings',
/  '/third_party/abseil-cpp/absl/algorithm:container',
/   '/third_party/abseil-cpp/absl/memory',
/  '../../../api:array_view',
/  '../../../api/task_queue:task_queue',
/   '../../../rtc_base:checks',
/  '../../../rtc_base:strong_alias',
/   ':types', -> ????
/  ':socket',
/  ':types',
/  '../socket:dcsctp_socket',
/  '../../../rtc_base:logging',
/  '../../../rtc_base:stringutils',
/  '../../../rtc_base:rtc_numerics',
/   bounded_io
/  '/third_party/crc32c',
/  '../common:internal_types',
/  '../common:math',
/  '../common:str_join',
/  '../public:types',
/  '../common:sequence_numbers',
/  '/third_party/abseil-cpp/absl/functional:bind_front',

dsctp_headers = [
  'public/dcsctp_message.h',
  'public/dcsctp_options.h',
  'public/dcsctp_handover_state.h',
  'public/dcsctp_socket.h',
  'public/dcsctp_socket_factory.h',
  'public/text_pcap_packet_observer.h',
  'public/packet_observer.h',
  'public/timeout.h',
  'public/types.h',
]

dcsctp_sources = [
  # public
  'public/dcsctp_handover_state.cc',
  'public/dcsctp_socket_factory.cc',
  'public/text_pcap_packet_observer.cc',

  # packet
  'packet/parameter/add_incoming_streams_request_parameter.cc',
  'packet/parameter/add_outgoing_streams_request_parameter.cc',
  'packet/parameter/forward_tsn_supported_parameter.cc',
  'packet/parameter/heartbeat_info_parameter.cc',
  'packet/parameter/incoming_ssn_reset_request_parameter.cc',
  'packet/parameter/outgoing_ssn_reset_request_parameter.cc',
  'packet/parameter/parameter.cc',
  'packet/parameter/reconfiguration_response_parameter.cc',
  'packet/parameter/ssn_tsn_reset_request_parameter.cc',
  'packet/parameter/state_cookie_parameter.cc',
  'packet/parameter/supported_extensions_parameter.cc',
  'packet/parameter/zero_checksum_acceptable_chunk_parameter.cc',
  'packet/packet/error_cause/cookie_received_while_shutting_down_cause.cc',
  'packet/packet/error_cause/cookie_received_while_shutting_down_cause.h',
  'packet/error_cause/packet/error_cause/.cc',
  'packet/error_cause/packet/error_cause/.h',
  'packet/error_cause/invalid_mandatory_parameter_cause.cc',
  'packet/error_cause/invalid_mandatory_parameter_cause.h',
  'packet/error_cause/invalid_stream_identifier_cause.cc',
  'packet/error_cause/invalid_stream_identifier_cause.h',
  'packet/error_cause/missing_mandatory_parameter_cause.cc',
  'packet/error_cause/missing_mandatory_parameter_cause.h',
  'packet/error_cause/no_user_data_cause.cc',
  'packet/error_cause/no_user_data_cause.h',
  'packet/error_cause/out_of_resource_packet/error_cause/.cc',
  'packet/error_cause/out_of_resource_packet/error_cause/.h',
  'packet/error_cause/protocol_violation_cause.cc',
  'packet/error_cause/protocol_violation_cause.h',
  'packet/error_cause/restart_of_an_association_with_new_address_cause.cc',
  'packet/error_cause/restart_of_an_association_with_new_address_cause.h',
  'packet/error_cause/stale_cookie_packet/error_cause/.cc',
  'packet/error_cause/stale_cookie_packet/error_cause/.h',
  'packet/error_cause/unrecognized_chunk_type_cause.cc',
  'packet/error_cause/unrecognized_chunk_type_cause.h',
  'packet/error_cause/unrecognized_parameter_cause.cc',
  'packet/error_cause/unrecognized_parameter_cause.h',
  'packet/error_cause/unresolvable_address_cause.cc',
  'packet/error_cause/unresolvable_address_cause.h',
  'packet/error_cause/user_initiated_abort_cause.cc',
  'packet/error_cause/user_initiated_abort_cause.h',
  'packet/chunk/abort_chunk.cc',
  'packet/chunk/abort_chunk.h',
  'packet/chunk/chunk.cc',
  'packet/chunk/chunk.h',
  'packet/chunk/cookie_ack_chunk.cc',
  'packet/chunk/cookie_ack_chunk.h',
  'packet/chunk/cookie_echo_chunk.cc',
  'packet/chunk/cookie_echo_chunk.h',
  'packet/chunk/data_chunk.cc',
  'packet/chunk/data_chunk.h',
  'packet/chunk/data_common.h',
  'packet/chunk/error_chunk.cc',
  'packet/chunk/error_chunk.h',
  'packet/chunk/forward_tsn_chunk.cc',
  'packet/chunk/forward_tsn_chunk.h',
  'packet/chunk/forward_tsn_common.h',
  'packet/chunk/heartbeat_ack_chunk.cc',
  'packet/chunk/heartbeat_ack_chunk.h',
  'packet/chunk/heartbeat_request_chunk.cc',
  'packet/chunk/heartbeat_request_chunk.h',
  'packet/chunk/idata_chunk.cc',
  'packet/chunk/idata_chunk.h',
  'packet/chunk/iforward_tsn_chunk.cc',
  'packet/chunk/iforward_tsn_chunk.h',
  'packet/chunk/init_ack_chunk.cc',
  'packet/chunk/init_ack_chunk.h',
  'packet/chunk/init_chunk.cc',
  'packet/chunk/init_chunk.h',
  'packet/chunk/reconfig_chunk.cc',
  'packet/chunk/reconfig_chunk.h',
  'packet/chunk/sack_chunk.cc',
  'packet/chunk/sack_chunk.h',
  'packet/chunk/shutdown_ack_chunk.cc',
  'packet/chunk/shutdown_ack_chunk.h',
  'packet/chunk/shutdown_chunk.cc',
  'packet/chunk/shutdown_chunk.h',
  'packet/chunk/shutdown_complete_chunk.cc',
  'packet/chunk/shutdown_complete_chunk.h',
  'packet/tlv_trait.cc',
  'packet/crc32c.cc',
  'packet/chunk_validators.cc',
  'packet/sctp_packet.cc',

  # rx
  'rx/data_tracker.cc',
  'rx/interleaved_reassembly_streams.cc',
  'rx/traditional_reassembly_streams.cc',
  'rx/reassembly_queue.cc',

  # socket
  'socket/heartbeat_handler.cc',
  'socket/stream_reset_handler.cc',
  'socket/packet_sender.cc',
  'socket/transmission_control_block.cc',
  'socket/callback_deferrer.cc',
  'socket/dcsctp_socket.cc',
  'socket/state_cookie.cc',

  # timer
  'timer/timer.cc',
  'timer/task_queue_timeout.cc',

  # tx
  'tx/rr_send_queue.cc',
  'tx/stream_scheduler.cc',
  'tx/retransmission_error_counter.cc',
  'tx/retransmission_timeout.cc',
  'tx/outstanding_data.cc',
  'tx/retransmission_queue.cc',
]

